GetUserInfo päringuga kasutaja olemasolu kontrollimisel leitakse nüüd ka kasutajad, kelle isikukood on päringus ilma riigi prefiksita ja ADIT-is riigi prefiksiga.